--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "vercel-build": "prisma generate && next build"
+    "vercel-build": "prisma generate && next build",
+    "test": "jest"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
-    "@headlessui/react": "^2.2.4",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.6",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
+    "@mui/x-date-pickers": "^8.8.0",
     "@prisma/client": "^6.10.1",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.81.5",
-    "lucide-react": "^0.525.0",
+    "dayjs": "^1.11.13",
     "next": "15.2.2",
     "next-auth": "5.0.0-beta.29",
     "react": "^19.0.0",
@@ -27,9 +30,17 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
     "prisma": "^6.10.1",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2"
   }
 }
